change: build to compile individual blocks in build

--- a/src/blocks/block-three/editor.scss
+++ b/src/blocks/block-three/editor.scss
@@ -1,5 +1,3 @@
-@import "./style.scss";
-
-.wp-block-example-block-three.is-selected {
-    border: 2px dotted #f00;
+.wp-block-create-block-block-three {
+	border: 1px dotted #f00;
 }
