--- a/src/blocks/block-one/editor.scss
+++ b/src/blocks/block-one/editor.scss
@@ -1,5 +1,3 @@
-@import "./style.scss";
-
-.wp-block-example-block-one.is-selected {
-    border: 2px dotted #f00;
+.wp-block-create-block-block-one {
+	border: 1px dotted #f00;
 }
